@@ -17,6 +17,3 @@ Things left to do
 	* Remove hardcoded texts (attributes and such).
 	* Stresstest list creation and modification.
 	* Implement list deletion.
-	* Remove 'hardcoded' path to /var/list. This IS configurable at
-	  runtime, but we need to look for lists in each domains
-	  'baseMailDir'.
