@@ -1,15 +1,11 @@
 <?php
 // navigation bar - ezmlm mailinglists manager
-// $Id: left-ezmlm.php,v 2.7 2002-12-25 11:30:43 turbo Exp $
+// $Id: left-ezmlm.php,v 2.8 2002-12-25 16:21:28 turbo Exp $
 //
 session_start();
 
 require("./include/pql.inc");
 require("./include/pql_ezmlm.inc");
-
-// Initialize
-$ezmlm = new ezmlm('alias', '/var/lists');
-
 require("./left-head.html");
 ?>
   <!-- EZMLM Mailinglists -->
@@ -26,27 +22,79 @@ require("./left-head.html");
   </div>
 
 <?php
-// Load list of mailinglists
-if(! $ezmlm->readlists()) {
+// Initialize
+$_pql = new pql($USER_HOST_USR, $USER_DN, $USER_PASS, false, 0);
+
+// Get ALL domains we have access to.
+// 'description: administrator=USER_DN' in the domain object
+$domains = pql_get_domain_value($_pql->ldap_linkid, '*', 'administrator', "=" . $USER_DN);
+if(!is_array($domains)) {
+    // no domain defined - report it
 ?>
-  <div id="el1Parent" class="parent">
-    <img name="imEx" src="images/plus.png" border="0" alt="+" width="9" height="9" id="el1Img">
-    <font color="black" class="heada">no lists<br>(<?=$ezmlm->error?>)</font></a>
+  <!-- start domain parent -->
+  <div id="el0000Parent" class="parent">
+    <img name="imEx" src="images/plus.png" border="0" alt="+" width="9" height="9" id="el0000Img">
+    <font color="black" class="heada">no domains</font></a>
   </div>
+  <!-- end domain parent -->
+
 <?php
 } else {
-    $j = 2;
+	asort($domains);
+	foreach($domains as $key => $domain) {
+		$number_of_lists = -1; // So that we end up with 0 for first list!
+
+		// Get base directory for mails
+		if(!($basemaildir = pql_get_domain_value($_pql->ldap_linkid, $domain, "basemaildir"))) {
+			die("Can't get base mail directory for domain '$domain'!<br>");
+		}
+
+		// Get (and remember) lists in this directory
+		if($ezmlm = new ezmlm('alias', $basemaildir)) {
+			$lists[$domain] = $ezmlm->mailing_lists;
+		}			
+	}
+
+	foreach($lists as $dom => $entry) {
+		$index = array();
+
+		foreach($entry as $listnumber => $listarray) {
+			$listname = $lists[$dom][$listnumber]["name"];
+			$listhost = $lists[$dom][$listnumber]["host"];
+
+			// Remember the listname, so we can sort below.
+			$index[]  = $listname;
+
+			foreach($listarray as $key => $value) {
+				$mailinglists[$listnumber][$key]= $value;
+				$mailinglists_index[$listname]	= $listnumber;
+			}
+
+			$listnumber++;
+		}
+
+		// Sort the domainname lists alphabetically.
+		asort($index);
+		foreach($index as $number => $name) {
+			$mailinglists_hostsindex[$listhost][$dom][$name] = $number;
+		}
+	}
+	
+	$j = 2;
 
 	// Sorted by domainname
-	foreach($ezmlm->mailing_lists_hostsindex as $host => $listarray) {
+	foreach($mailinglists_hostsindex as $host => $listnames) {
+		foreach($listnames as $domain => $listarray) {
+			;
+		}
 ?>
   <!-- start ezmlm mailing list domain -->
   <div id="el<?=$j?>Parent" class="parent">
-    <a class="item" href="ezmlm_detail.php?domain=<?=$host?>" onClick="if (capable) {expandBase('el<?=$j?>', true); return false;}">
+    <a class="item" href="ezmlm_detail.php?domain=<?=$domain?>&domainname=<?=$host?>" onClick="if (capable) {expandBase('el<?=$j?>', true); return false;}">
       <img name="imEx" src="images/plus.png" border="0" alt="+" width="9" height="9" id="el<?=$j?>Img">
     </a>
 
-    <a class="item" href="ezmlm_detail.php?domain=<?=$host?>">
+    <a class="item" href="ezmlm_detail.php?domain=<?=$domain?>&domainname=<?=$host?>">
       <font color="black" class="heada"><?=$host?></font>
     </a>
   </div>
@@ -55,7 +103,7 @@ if(! $ezmlm->readlists()) {
   <!-- start ezmlm mailing list children -->
   <div id="el<?=$j?>Child" class="child">
     <nobr>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="ezmlm_add.php?domain=<?=$host?>">Add a mailing list</a>
+      <a href="ezmlm_add.php?domain=<?=$domain?>&domainname=<?=$host?>">Add a mailing list</a>
     </nobr>
 
     <br>
@@ -65,8 +113,8 @@ if(! $ezmlm->readlists()) {
 		foreach($listarray as $name => $no) {
 ?>
     <nobr>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="ezmlm_detail.php?domain=<?=$host?>&listno=<?=$no?>"><img src="images/navarrow.png" width="9" height="9" border="0"></a>&nbsp;
-      <a class="item" href="ezmlm_detail.php?domain=<?=$host?>&listno=<?=$no?>"><?=$name?></a>
+      <a href="ezmlm_detail.php?domain=<?=$domain?>&domainname=<?=$host?>&listno=<?=$no?>"><img src="images/navarrow.png" width="9" height="9" border="0"></a>&nbsp;
+      <a class="item" href="ezmlm_detail.php?domain=<?=$domain?>&domainname=<?=$host?>&listno=<?=$no?>"><?=$name?></a>
     </nobr>
 
     <br>
@@ -79,7 +127,6 @@ if(! $ezmlm->readlists()) {
 		$j++;
 	}
 }
-
 require("./left-trailer.html");
 
 /*
@@ -90,3 +137,5 @@ require("./left-trailer.html");
  * End:
  */
 ?>
+  </body>
+</html>
